# confflow

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  config.yml  file  playground.ipynb  playground.ipynb 14-55-58-364.ipynb  pyproject.toml  template.yml
archieve/: config_saver.py  file_handler.py  loader.py
confflow/: __init__.py  config_factory.py  config_manager.py  config_proxy.py  formatter.py  ipython.py  manager.py  mixins.py  protocols.py  types.py  typings.py  utils.py
confflow/common/: utils.py
confflow/config/: config.py  entry.py
confflow/config_manager/: __init__.py  confflow_manager.py  config.py  config_handler.py  config_manager.py  file_handler.py
confflow/constraints/: list.py
confflow/core/: __init__.py  config.py  config_builder.py  config_handler.py  config_loader.py  config_manager.py  exclusive_schema_manager.py  field_constraint.py  field_factory.py  field_factory.pyi  field_values.py  fields.py  parser.py  schema_registry.py  types.py
confflow/fields/: communication.py
confflow/file_handler/: yaml_file_handler.py
confflow/formatter/: __init__.py  base_formatter.py  formatter.py  formatter_registry.py  yaml.py  yaml_formatter.py
confflow/io/: __init__.py  io.py
confflow/manager/: confflow.py  group.py  manager.py
confflow/resolver/: __init__.py  schema_resolver.py
confflow/schema/: __init__.py  field.py  schema.py
confflow/utils/: types.py
demo/: comprehensive.yaml  comprehensive_template.yaml  config.yml  demo.ipynb  simple.yaml  simple_template.yaml  template.yml  template_config.yml
(+122 files in other folders)
