[project]
name = "confflow"
version = "3.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pedro José Mora Gallegos", email = "pedrojosemoragallegos@outlook.de" },
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.2",
]

[project.scripts]
confflow = "confflow:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"


[project.urls]
Homepage = "https://www.linkedin.com/in/pedro-jose-mora-gallegos"
Repository = "https://github.com/pedrojosemoragallegos/confflow"

[tool.mypy]
strict = true
warn_unreachable = true
warn_unused_configs = true
warn_redundant_casts = true
warn_no_return = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    "D100",  # docstring in public module
    "D101",  # docstring
    "D102",  # docstring public method
    "D103",  # docstring in public function
    "D104",  # docstring public packageRuff
    "D105",  # docstring magic function
    "D107",  # docstring __init__
    "TD002", # missing author in TODO
    "TD003", # missing issue link for this 
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipython>=8.37.0",
    "mypy>=1.18.2",
    "ruff>=0.13.1",
    "types-pyyaml>=6.0.12.20250915",
]
